@@ -1,5 +1,6 @@
 # -*- coding: utf-8 -*-
 import json
+from django.conf import settings
 from django.contrib.auth.decorators import login_required
 from django.views.decorators.http import last_modified as cache_last_modified
 from django.views.decorators.cache import never_cache as force_cache_validation
@@ -11,6 +12,7 @@ from mapentity.views import (MapEntityLayer, MapEntityList, MapEntityJsonList,
                              HttpJSONResponse)
 
 from geotrek.authent.decorators import same_structure_required
+from geotrek.common.utils import classproperty
 
 from .models import Path, Trail
 from .forms import PathForm, TrailForm
@@ -36,7 +38,13 @@ class PathLayer(MapEntityLayer):
 class PathList(MapEntityList):
     queryset = Path.objects.prefetch_related('networks').select_related('stake')
     filterform = PathFilterSet
-    columns = ['id', 'name', 'networks', 'stake', 'trails']
+
+    @classproperty
+    def columns(cls):
+        columns = ['id', 'name', 'networks', 'stake']
+        if settings.TRAIL_MODEL_ENABLED:
+            columns.append('trails')
+        return columns
 
     def get_queryset(self):
         """
@@ -45,12 +53,13 @@ class PathList(MapEntityList):
         qs = super(PathList, self).get_queryset()
 
         denormalized = {}
-        paths_id = qs.values_list('id', flat=True)
-        paths_trails = Trail.objects.filter(aggregations__path__id__in=paths_id)
-        by_id = dict([(trail.id, trail) for trail in paths_trails])
-        trails_paths_ids = paths_trails.values_list('id', 'aggregations__path__id')
-        for trail_id, path_id in trails_paths_ids:
-            denormalized.setdefault(path_id, []).append(by_id[trail_id])
+        if settings.TRAIL_MODEL_ENABLED:
+            paths_id = qs.values_list('id', flat=True)
+            paths_trails = Trail.objects.filter(aggregations__path__id__in=paths_id)
+            by_id = dict([(trail.id, trail) for trail in paths_trails])
+            trails_paths_ids = paths_trails.values_list('id', 'aggregations__path__id')
+            for trail_id, path_id in trails_paths_ids:
+                denormalized.setdefault(path_id, []).append(by_id[trail_id])
 
         for path in qs:
             path_trails = denormalized.get(path.id, [])
